# project-templates

./: .gitignore  README.md
scripts/: templater.py
templates/python/: .gitignore  LICENSE  README.md  pyproject.toml
templates/python/src/python_template/: __init__.py
templates/rust/: .gitignore  Cargo.toml  README.md
templates/rust/src/: main.rs
templates/typescript/: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
templates/typescript/src/: index.ts
